--- a/Mindful/Views/Shared/_Layout.cshtml
+++ b/Mindful/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
 ﻿<!DOCTYPE html>
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
+
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -7,6 +11,8 @@
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
     <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/css/teachers.css" />
+
 </head>
 <body>
     <div class="container">
