--- a/Mindful/Views/Home/Index.cshtml
+++ b/Mindful/Views/Home/Index.cshtml
@@ -19,9 +19,9 @@
                         <a href="#" class="list-group-item active">Dashboard</a>
                         <a href="@Url.Action("Index", "Teacher")" class="list-group-item">Teachers</a>
                     
-                        <a href="#" class="list-group-item">Student</a>
-                        <a href="#" class="list-group-item">Courses</a>
-                        <a href="#" class="list-group-item">Statistics</a>
+                        <a href="@Url.Action("Index", "Student")" class="list-group-item">Student</a>
+                        <a href="@Url.Action("Index", "Subject")" class="list-group-item">Subjects</a>
+                        <a href="@Url.Action("Index", "Grade")" class="list-group-item">Grades</a>
                     </nav>
                 </div>
             </div>
